# BloomBee

./: .gitignore  Dockerfile  LICENSE  README.md  bootstrapP100_1.id  bootstrapP100_2.id  bootstrapP100_7.id  bootstrapP100_8.id  bootstrap_1.id  bootstrap_2.id  bootstrapp1.id  bootstrapp100.id  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pylint.yml
FlexLLMGen/: README.md  pyproject.toml
FlexLLMGen/FlexLLMGen_TP/: readme.txt
FlexLLMGen/FlexLLMGen_TP/flexgen/: mha_parallel.json  opt_config.py  pytorch_backend.py  readme.txt
FlexLLMGen/benchmark/flexllmgen/: bench_6.7b_1x2.sh
FlexLLMGen/flexgen_tp/: README.md  compression.py  flex_opt.py  mlp_parallel.json  opt_config.py  pytorch_backend.py  utils.py
bak_bloombee/cli/: run_dht.py  run_server.py
bak_bloombee/core/: base_runner.py
benchmarks/: benchmark_forward.py  benchmark_inference.py  benchmark_training.py  benchmark_validate.py
benchmarks/outputs/: outputs_huggyllama--llama-7b.pt  poly_validation_huggyllama--llama-7b_float32_1P100_on_huggyllama--llama-7b.parquet
bloombee/: logger.py  utils.py
examples/: prompt-tuning-personachat.ipynb  prompt-tuning-sst2.ipynb
outputs/: outputs_huggyllama--llama-7b.pt  poly_validation_huggyllama--llama-7b_float32_1P100_on_huggyllama--llama-7b.parquet
src/bloombee/: __init__.py  constants.py  dht_utils.py
src/bloombee/bak_client/: __init__.py  config.py  from_pretrained.py  inference_session.py  ptune.py  remote_forward_backward.py  remote_generation.py
src/bloombee/bak_models/: __init__.py
src/bloombee/bak_server/: block_functions.py  server.py  throughput.py
src/bloombee/bak_utils/: auto_config.py  logging.py  version.py
src/bloombee/cli/: run_dht.py  run_server.py
src/bloombee/client/: from_pretrained.py  inference_session.py  inference_session_time_range.py  remote_generation.py  remote_sequential.py  (+1 more)
tests/: test_aux_functions.py  test_block_exact_match.py  test_cache.py  test_chained_calls.py  test_dtype.py  test_full_model.py  test_optimized_layers.py  test_peft.py  test_priority_pool.py  test_remote_sequential.py  test_sequence_manager.py  test_server_stats.py  test_speculative_generation.py  test_tensor_parallel.py
(+47 files in other folders)
