[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloombee"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A short description of your project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.12",
    "bitsandbytes==0.41.1",
    "accelerate>=0.27.2",
    "huggingface-hub>=0.11.1,<1.0.0",
    "tokenizers>=0.13.3",
    "transformers==4.43.1",
    "speedtest-cli==2.1.3",
    "hivemind",
    "tensor_parallel==1.0.23",
    "humanfriendly",
    "async-timeout>=4.0.2",
    "cpufeature>=0.2.0; platform_machine == 'x86_64'",
    "packaging>=20.9",
    "sentencepiece>=0.1.99",
    "peft==0.8.2",
    "safetensors>=0.3.1",
    "Dijkstar>=2.6.0",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "pytest==6.2.5",
    "pytest-forked",
    "pytest-asyncio==0.16.0",
    "black==22.3.0",
    "isort==5.10.1",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/yottalabsai/BloomBee"

[tool.setuptools.packages.find]
where = ["src"]