[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexgen_tp"
version = "0.1.0"
description = "Parallel transformer implementations for LLM models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=1.12", "transformers>=4.24",
    "numpy", "tqdm", "attrs",
]

[project.urls]
"Homepage" = "https://github.com/FMInference/FlexGenTP"
"Bug Tracker" = "https://github.com/FMInference/FlexGenTP/issues"

[tool.setuptools.packages.find]
where = ["flexllmgen", "flexgen_tp"]
exclude = ["benchmark*", "dist*", "playground*", "scripts*"]

[tool.wheel]
exclude = ["benchmark*", "dist*", "playground*", "scripts*"]

